--- a/debian/rules
+++ b/debian/rules
@@ -29,6 +29,14 @@ MAKEFLAGS += $(if $(DEB_BUILD_OPTIONS_PARALLEL),-j$(DEB_BUILD_OPTIONS_PARALLEL))
 # from having to guess our platform (since we know it already)
 DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+DEB_BUILD_GNU_CPU  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_CPU)
+
+# ppc64 support; see #386815
+# XXX Should probably be fixed in binutils
+# XXX Use LDFLAGS instead of CFLAGS?
+ifeq ($(DEB_BUILD_GNU_CPU),powerpc64)
+	CFLAGS += -mminimal-toc
+endif
 
 CFLAGS += -Wall -g -O$(if $(findstring noopt,$(DEB_BUILD_OPTIONS)),0,2)
 
